- 13: Enh. #737: Batch export now with optionally specified settings file <2>
- 13: Enh. #740: Automatic backup on loading preferences from file (via menu) <2>
- 13: Enh. #741: Ini file path as command-line option for all modes [S. Sobisch]2
- 13: Bugfix #742: Command-line option -v didn't actually work with argument <2>
- 13: Issue #327: Spanish default keywords for input / output modified <2>

Version: 3.29 (2019-01-07)
- 01: Bugfix #511: Cursor-down key was trapped by collapsed CASE and PARALLEL <2>
- 01: Enh. #515: More intelligent aligning strategy for diagrams in Arranger <2>
- 01: Bugfix #517: Correct export of includable declarations to Java, C++, C# <2>
- 01: Bugfix #518: Very slow scrolling of diagrams lacking type info [TiNNiT]2
- 01: Bugfix #520: "no conversion" export mode had to be enforced (Pascal, C) <2>
- 01: Bugfix #521: Variable declaration export had been inconsistent for Oberon <2>
- 01: Enh. #519: Zooming / font size control via ctrl + mouse wheel [B. Neuberg]2
- 01: Bugfix #522: Outsourcing now copes better with record types and includes <2>
- 01: Bugfix #523: Undoing and redoing of include list changes mended <2>
- 02: Bugfix #525: Defective test coverage detection for recursive routines,
      lacking operation counts on input, output, and jump instructions fixed <2>
- 02: Issue #512: Arranger zoom compensation for PNG export was flawed <2>
- 02: Bugfix #526: On re-saving the renaming of the temp. file may fail (Linux) <2>
- 02: Issue #527: More helpful Executor messages on index range violations <2>
- 02: Issue #463: Console output replaced by configurable logging [R. Schmidt]2
- 02: Bugfix #528: Analyser check of record component access mended <2>
- 02: Bugfix #529: Concurrency on drawing diagrams during execution solved <2>
- 02: Bugfix #451: Java version test in shell start scripts revised [hans005]
- 02: Bugfix #533: Import of struct types from C files was dysfunctional <2>